--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -5,13 +5,32 @@
 html,body{
 height: 100%;
 font-family: 'Numans', sans-serif;
+
 }
 .backgroud-login{
     width: 100%;
-    height: 753px;
-    background-image: url('http://getwallpapers.com/wallpaper/full/a/5/d/544750.jpg');
+    background: url('http://getwallpapers.com/wallpaper/full/a/5/d/544750.jpg') no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
     background-size: cover;
-    background-repeat: no-repeat;
+}
+#bg {
+  position: fixed; 
+  top: -50%; 
+  left: -50%; 
+  width: 200%; 
+  height: 200%;
+}
+#bg img {
+  position: absolute; 
+  top: 0; 
+  left: 0; 
+  right: 0; 
+  bottom: 0; 
+  margin: auto; 
+  min-width: 50%;
+  min-height: 50%;
 }
 .container-login{
 width: 100%;
@@ -21,7 +40,7 @@ align-content: center;
 }
 
 .card-login{
-height: 45%;
+height: 24%;
 margin-top: auto;
 margin-bottom: auto;
 width: 400px;
